test/input/negative/simple_nested.ls
type Address = {
    street: string,
    city: string
}

type Person = {
    name: string,
    address: Address
}
